added socialmedia icons to images

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+body {
+
+  background-color: #191765;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+.name-intro{
+  font-weight: 700;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 72px;
+  color: #7D73FC;
+  padding-bottom: 3vh;
+
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+
+}
+
+.profesion {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 138%;
+  color: #EDECFF;
+  padding-bottom: 9vh;
+  
+}
+
+.app-bar {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+.bio{
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  color: #C8C8D4;
+  padding: 0 25px 30px 25px;
+}
+
+.divider {
+
+  width: 370px;
+  height: 0;
+  border: 1px solid grey;
+  margin: auto;
+}
+
+.skills {
+  padding-top: 40px;
+  padding-bottom:50px ;
+  display: flex;
+  flex-wrap: wrap;
+  align-self:flex-end;
+}
+
+.skills2 {
+
+  flex: 40%;
+  padding-left: 40px;
+  
+}
+
+.list, li {
+
+  list-style: none;
+  padding: 0;
+  line-height: 2;
+  
+}
+
+.tskill {
+  color: #9490FF;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 24px;
+}
