--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   background-color: #191765;
   color: white;
   font-family: 'Roboto', sans-serif;
-  background-image: url("./images/Ellipse\ 18@2xleft.png");
+  background-image: url("./images/Ellipse 18@2xleft.png");
   background-repeat: no-repeat;
   background-size: 150px;
   margin: 0;
@@ -64,7 +64,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-self: flex-end;
-  background-image: url("./images/Ellipse\ 19@2x.png");
+  background-image: url("./images/Ellipse 19@2x.png");
   background-repeat: no-repeat;
   background-position: right;
 }
